maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: not found: value void
  void setDirection(Direction.NORD)
  ^JediEscaper:32: error: not found: value posy
    indNord=getIndication(posx,posy+1)   
                               ^JediEscaper:34: error: not found: value void
  void setDirection(Direction.SUD)
  ^JediEscaper:36: error: not found: value posy
    indSud=getIndication(posx,posy-1)   
                              ^JediEscaper:38: error: not found: value void
  void setDirection(Direction.OUEST)
  ^JediEscaper:40: error: not found: value posy
    indOuest=getIndication(posx-1,posy)   
                                  ^JediEscaper:42: error: not found: value void
  void setDirection(Direction.EST)
  ^JediEscaper:44: error: not found: value posy
    indEst=getIndication(posx+1,posy)   
                                ^